fix(backend): swagger fixed
