# apps/backend/docs/swagger/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /api/v1
+basePath: /
 definitions:
   handlers.ErrorResponse:
     properties:
@@ -65,6 +65,11 @@ definitions:
     - password
     - username
     type: object
+  handlers.messageResponse:
+    properties:
+      message:
+        type: string
+    type: object
   handlers.registerRequest:
     properties:
       email:
@@ -83,11 +88,6 @@ definitions:
     required:
     - password
     - username
-    type: object
-  handlers.tokenResponse:
-    properties:
-      token:
-        type: string
     type: object
   handlers.userResponse:
     properties:
@@ -180,7 +180,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handlers.tokenResponse'
+            $ref: '#/definitions/handlers.messageResponse'
         "400":
           description: Bad Request
           schema:
@@ -190,6 +190,18 @@ paths:
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
       summary: Вход в систему
+      tags:
+      - Auth
+  /api/v1/auth/logout:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.messageResponse'
+      summary: Выход из системы
       tags:
       - Auth
   /api/v1/auth/me:
@@ -239,6 +251,27 @@ paths:
       summary: Регистрация нового пользователя
       tags:
       - Auth
+  /api/v1/entries:
+    get:
+      description: Возвращает массив {id, name, start_time}
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.MeasurementsItem'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Список измерений
+      tags:
+      - Measurements
   /api/v1/health:
     get:
       consumes:
@@ -260,26 +293,30 @@ paths:
       summary: Проверка работоспособности бэкенда
       tags:
       - Heartbeat
-  /api/v1/measurements:
+  /api/v1/table:
     get:
-      description: Возвращает массив {id, name, start_time}
+      consumes:
+      - application/json
+      description: |-
+        Возвращает матрицу временных рядов от пьезосенсоров для визуализации.
+        Каждая строка матрицы — данные одного сенсора.
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Пример ответа
           schema:
-            items:
-              $ref: '#/definitions/handlers.MeasurementsItem'
-            type: array
+            $ref: '#/definitions/handlers.TableResponse'
         "500":
-          description: Internal Server Error
+          description: Ошибка генерации данных
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-      summary: Список измерений
+      security:
+      - BearerAuth: []
+      summary: Получить демо-таблицу данных сенсоров
       tags:
-      - Measurements
-  /api/v1/measurements/upload:
+      - Data
+  /api/v1/upload:
     post:
       consumes:
       - multipart/form-data
@@ -310,30 +347,11 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Загрузить файл измерения
       tags:
       - Measurements
-  /api/v1/table:
-    get:
-      consumes:
-      - application/json
-      description: |-
-        Возвращает матрицу временных рядов от пьезосенсоров для визуализации.
-        Каждая строка матрицы — данные одного сенсора.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Пример ответа
-          schema:
-            $ref: '#/definitions/handlers.TableResponse'
-        "500":
-          description: Ошибка генерации данных
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-      summary: Получить демо-таблицу данных сенсоров
-      tags:
-      - Data
 schemes:
 - http
 securityDefinitions:
